kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-birthday-ingress
  annotations:
    http.port: "443"
spec:
  backend:
    serviceName: docker-birthday
    servicePort: 8080
